Fixed layout issues

--- a/Project Charlo/Styles/UI.css
+++ b/Project Charlo/Styles/UI.css
@@ -2,7 +2,7 @@ body {
   background-image: url(/images/got.jpeg);
 }
 .title {
-  width: 40ch;
+  width: 20ch;
 }
 .blocks {
   width: 100vw;
